# rtcsdk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  clion-cpp-style.xml
doc/: com-ptr.md  connection-points.md  constructing-objects.md  customization-points.md  dll-server.md  faq.md  guid-helpers.md  idlgen.md  interfaces.md  leak-detection.md  macros.md  traits.md
rtcsdk/: com_ptr.h  connection_point.h  errors.h  factory.h  guid.h  interfaces.h  onexit.h  rtcsdk.h  srwlock.h  vector.h
tests/: CMakeLists.txt  idlgen_tests.cpp  main.cpp  rtcsdk_tests.cpp
tools/: CMakeLists.txt
tools/idlgen/: CMakeLists.txt  idl_generator.cpp  idl_generator.h  main.cpp  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  type_mapper.cpp  type_mapper.h  types.h
